# 3DCurvesTrivial

./: CMakeLists.txt  README.md  main.cpp  objects.h
